k8s/template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: $namespace
spec: {}
status: {}
