k8s/template/demo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: $service
  labels:
    app: $service
spec:
  type: NodePort
  ports:
  - port: $port
    name: http
  selector:
    app: $service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $service
  labels:
    app: $service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $service
      version: v1
  template:
    metadata:
      labels:
        app: $service
        version: v1
    spec:
      serviceAccountName: $namespace-$service
      imagePullSecrets: 
      - name: harborsecret 
      containers:
      - name: $service
        image: $harbor_registry/$namespace/$service:0.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: $port
        volumeMounts:
        - name: fromfile-configmap
          mountPath: /opt/microservices/instance
      volumes:
      - name: fromfile-configmap
        configMap:
          name: $service-configmap
