k8s/template/demo-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: $service-dr
spec:
  host: $service
  subsets:
  - name: v1
    labels:
      version: v1
