k8s/template/demo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $service-vs
spec:
  hosts:
  - $service
  http:
  - route:
    - destination:
        host: $service
        subset: v1
